2018-03-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.70 released.

2018-03-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.69 released.

2018-03-02  Carl Hetherington  <cth@carlh.net>

	* Fix bad Prores exports in some cases (#1227).

2018-02-27  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.68 released.

2018-02-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.67 released.

2018-02-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.66 released.

2018-02-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.65 released.

2018-02-25  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

	* Version 2.11.64 released.

2018-02-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.63 released.

2018-02-25  Carl Hetherington  <cth@carlh.net>

	* Handle errors in subtitle XML better (#1209).

2018-02-24  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 2.11.62 released.

2018-02-23  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.61 released.

2018-02-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.60 released.

2018-02-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.59 released.

2018-02-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.58 released.

2018-02-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.57 released.

2018-02-16  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.56 released.

2018-02-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.55 released.

2018-02-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.54 released.

2018-02-10  Carl Hetherington  <cth@carlh.net>

	* Use a different way of getting frame rate from video content; may
	fix #1030.

	* Version 2.11.53 released.

2018-02-09  Carl Hetherington  <cth@carlh.net>

	* Always pre-roll when seeking in DCPs (#1085).

	* Version 2.11.52 released.

2018-02-09  Carl Hetherington  <cth@carlh.net>
